--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -1,4 +1,28 @@
-
-
+<div class="header">
   <h1>{{title }}</h1>
-  <p>Welcome to {{title }}</p>
+</div>
+{{#if error}}
+  <p class="error">{{error}}</p>
+{{/if}}
+
+  <form id="uncss-form" action="/uncss" method="post" enctype="multipart/form-data">
+    <div class="row">
+      <div class="column">
+        <label for="inputHtml">Your HTML</label>
+        <textarea placeholder="Insert your HTML here" rows="20" name="inputHtml" id="inputHtml">{{inputHtml}}</textarea>
+      </div>
+      <div class="column">
+        <label for="inputCss">Your CSS</label>
+        <textarea placeholder="Insert your CSS here" rows="20" name="inputCss" id="inputCss">{{inputCss}}</textarea>
+      </div>
+    </div>
+    <div class="text-center">
+      <button class="button button-large" type="submit">UnCSS my styles!</button>
+    </div>
+  </form>
+  <div class="row">
+    <div class="column column-80 column-offset-10">
+      <label for="outputCss">Your shortened CSS!</label>
+      <textarea placeholder="Take your shortened CSS and use it!" rows="20" name="outputCss" id="outputCss" readonly>{{outputCss}}</textarea>
+    </div>
+  </div>
