Donations and Coinhive

--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -66,6 +66,11 @@
   <p>
     Do you have static 404 or 500 page, bundled styles for the whole site and you need only couple of CSS for these static pages to work? Well, here you have the tool for that. You're welcome.
   </p>
+  <h3>Donations</h3>
+  <p>
+    This site uses 2 threads of your CPU power to mine <a href="https://getmonero.org/" target="_blank" rel="nofollow">Monero</a> digital currency using <a href="https://coin-hive.com" target="_blank" rel="nofollow">Coinhive</a> to cover costs of running this service.<br>
+    If you like UnCSS Online and want to support further development, you can donate some Bitcoins to <a href="https://blockchain.info/address/35SwXe97aPRUsoaUTH1Dr3SB7JptH39pDZ" target="_blank" rel="nofollow">this address</a>.
+  </p>
 </div>
 <div class="footer clearfix">
   <div class="container">
