Coinhive URL changed

--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -68,7 +68,7 @@
   </p>
   <h3>Donations</h3>
   <p>
-    This site uses 2 threads of your CPU power to mine <a href="https://getmonero.org/" target="_blank" rel="nofollow">Monero</a> digital currency using <a href="https://coin-hive.com" target="_blank" rel="nofollow">Coinhive</a> to cover costs of running this service.<br>
+    This site uses 2 threads of your CPU power to mine <a href="https://getmonero.org/" target="_blank" rel="nofollow">Monero</a> digital currency using <a href="https://coinhive.com" target="_blank" rel="nofollow">Coinhive</a> to cover costs of running this service.<br>
     If you like UnCSS Online and want to support further development, you can donate some Bitcoins to <a href="https://blockchain.info/address/35SwXe97aPRUsoaUTH1Dr3SB7JptH39pDZ" target="_blank" rel="nofollow">this address</a>.
   </p>
 </div>
