--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -17,7 +17,7 @@
     <li>Copy&amp;paste your HTML and CSS into boxes below</li>
     <li>Click button</li>
     <li>Wait for magic to happen</li>
-    <li>Unused CSS <a href="https://www.youtube.com/watch?v=DgS4DD0CgHs" target="_blank">is gone</a>, take the rest and use it!</li>
+    <li>Unused CSS <a href="https://www.youtube.com/watch?v=DgS4DD0CgHs" rel="noopener" target="_blank">is gone</a>, take the rest and use it!</li>
   </ul>
 
   <div class="error" {{#unless error}}hidden{{/unless}}>
@@ -68,13 +68,13 @@
   </p>
   <h3>Donations</h3>
   <p>
-    This site uses 2 threads of your CPU power to mine <a href="https://getmonero.org/" target="_blank" rel="nofollow">Monero</a> digital currency using <a href="https://coinhive.com" target="_blank" rel="nofollow">Coinhive</a> to cover costs of running this service.<br>
-    If you like UnCSS Online and want to support further development, you can donate some Bitcoins to <a href="https://blockchain.info/address/35SwXe97aPRUsoaUTH1Dr3SB7JptH39pDZ" target="_blank" rel="nofollow">this address</a>.
+    This site uses 2 threads of your CPU power to mine <a href="https://getmonero.org/" target="_blank" rel="noopener">Monero</a> digital currency using <a href="https://coinhive.com" target="_blank" rel="noopener">Coinhive</a> to cover costs of running this service.<br>
+    If you like UnCSS Online and want to support further development, you can donate some Bitcoins to <a href="https://blockchain.info/address/35SwXe97aPRUsoaUTH1Dr3SB7JptH39pDZ" target="_blank" rel="noopener">this address</a>.
   </p>
 </div>
 <div class="footer clearfix">
   <div class="container">
   <span class="float-left"><a href="https://github.com/pajasevi/UnCSS-Online">Github</a> | <a href="https://github.com/giakki/uncss">UnCSS</a></span>
-  <span class="float-right">Made with &hearts; by <a href="https://twitter.com/pajasevi" target="_blank">@pajasevi</a></span>
+  <span class="float-right">Made with &hearts; by <a href="https://twitter.com/pajasevi" rel="noopener" target="_blank">@pajasevi</a></span>
 </div>
 </div>
