refactor uncss processing

--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -27,7 +27,7 @@
     </div>
   </div>
 
-  <form id="uncss-form" action="/uncss" method="post" enctype="multipart/form-data">
+  <form id="uncss-form" action="/api/uncss" method="post" enctype="multipart/form-data">
     <div class="row">
       <div class="column">
         <label for="inputHtml">Your HTML</label>
