--- a/main.css
+++ b/main.css
@@ -1,5 +1,3 @@
-@import 'normalize.css/normalize.css';
-@import 'milligram/dist/milligram.min.css';
 
 *,
 *:before,
@@ -8,7 +6,7 @@
 }
 
 body {
-  background: url('./img/background.png') no-repeat center center #fff;
+  background: url('/static/img/background.png') no-repeat center center #fff;
   background-size: cover;
   box-sizing: border-box;
 }
@@ -95,23 +93,25 @@ textarea {
 .github-corner:hover .octo-arm {
   animation: octocat-wave 560ms ease-in-out;
 }
+
 @media (max-width: 500px) {
   .github-corner:hover .octo-arm {
     animation: none;
   }
+
   .github-corner .octo-arm {
     animation: octocat-wave 560ms ease-in-out;
   }
 }
 
-@keyframes octocat-wave{
-  0%,100% {
+@keyframes octocat-wave {
+  0%, 100% {
     transform: rotate(0);
   }
-  20%,60% {
+  20%, 60% {
     transform: rotate(-25deg);
   }
-  40%,80% {
+  40%, 80% {
     transform: rotate(10deg);
   }
 }
